fixed bottom border of NewGame Button being cut off

--- a/src/NewGame.css
+++ b/src/NewGame.css
@@ -6,8 +6,8 @@
   color: #eeeeee;
   padding:1.5vh;
   font-size: 1.5vh;
-  margin-right: 2vh;
-  border:1px solid white;
+  margin: 0 2vh 0.5vh 0;
+  border:2px solid white;
   box-shadow: 0vh .5vh .5vh silver;
   transition: all 1s;
 }
